# Apex-Trading-Bot

./: .env.example  .gitignore  README.md  pyproject.toml
config/: settings.yaml
data/: position_metadata.json  suppression_log.json
logs/: signal_memory.csv  trade_journal.csv
reports/: AAPL_equity_curve.csv  AMD_equity_curve.csv  AMZN_equity_curve.csv  GOOGL_equity_curve.csv  META_equity_curve.csv  MSFT_equity_curve.csv  NVDA_equity_curve.csv  QQQ_equity_curve.csv  SPY_equity_curve.csv  TSLA_equity_curve.csv
src/apex/: main.py
src/apex/analytics/: account_snapshot.py  backtester.py  equity_curve.py  indicators.py  performance_dashboard.py  plot_equity_curves.py  promotion_governance.py  rejection_analytics.py  research_promotion.py  run_backtest.py  signal_persistence.py
src/apex/backtesting/: walk_forward.py
src/apex/core/: config.py  logger.py  market_clock.py
src/apex/data/: market_data.py
src/apex/execution/: alpaca_client.py  execution_guard.py  order_executor.py
src/apex/monitoring/: signal_memory.py  slack_notifier.py  suppression_logger.py  trade_journal.py
src/apex/portfolio/: cooldown_manager.py  correlation_filter.py  daily_limits.py  exit_manager.py  portfolio_heat.py  portfolio_risk_manager.py  position_manager.py  position_metadata.py  sector_exposure.py  trade_planner.py
src/apex/regime/: regime_engine.py
src/apex/risk/: risk_engine.py
src/apex/signals/: regime_signals.py  (+2 more)
src/apex_trading_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_regime_signals.py  test_risk_engine.py  test_signal_scoring.py
(+3 files in other folders)
